--- a/src/content/docs/fr/ux-cognitive-psychology.mdx
+++ b/src/content/docs/fr/ux-cognitive-psychology.mdx
@@ -13,13 +13,13 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
       srtUrl="/podcasts/ux-cognitive-psychology.srt"
     />
 
-## 📘 **1. Définition**
+## 1. Définition
 
 > La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans la perception, la mémoire, l’attention, la prise de décision, etc. Elle aide à concevoir des interfaces adaptées aux limites et aux habitudes cognitives des utilisateurs.
 
 ---
 
-### 🧩 **2. Pourquoi c’est important en UX ?**
+### 2. Pourquoi c’est important en UX ?
 
 - Nos utilisateurs **ne traitent pas l’information comme des machines**
 - Le cerveau est **limité** en mémoire, attention et raisonnement
@@ -27,7 +27,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 ---
 
-### 🔎 **3. Grands processus cognitifs utiles en UX**
+### 3. Grands processus cognitifs utiles en UX
 
 | 🧠 Processus | 💡 Implication UX |
 | --- | --- |
@@ -39,7 +39,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 ---
 
-### 🧠 **4. Charge cognitive**
+### 4. Charge cognitive
 
 > C’est l’effort mental que l’utilisateur doit fournir pour traiter l’information.
 > 
@@ -54,7 +54,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 ---
 
-### 🧨 **5. Biais & lois cognitives utiles en UX**
+### 5. Biais & lois cognitives utiles en UX
 
 | 🧠 Biais / Loi UX | ✨ Application concrète |
 | --- | --- |
@@ -67,7 +67,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 ---
 
-### 🎯 **6. Intégration dans le design UX**
+### 6. Intégration dans le design UX
 
 - **Interfaces simples, claires, lisibles**
 - **UX Writing** adapté pour guider sans effort
@@ -76,7 +76,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 ---
 
-### ✅ **Conclusion**
+### Conclusion
 
 La psychologie cognitive donne au designer les **clés pour anticiper les comportements utilisateurs**. Elle permet de :
 
