--- a/src/content/docs/fr/ux-user-research.mdx
+++ b/src/content/docs/fr/ux-user-research.mdx
@@ -3,8 +3,17 @@ title: Recherche Utilisateur
 description: "Comprendre les utilisateurs pour concevoir les bonnes solutions"
 weight: 3
 ---
+import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-## 📘 **1. Définition**
+<code> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+
+<SrtPlayer
+  client:only="react"
+  audioSrc="/podcasts/ux-user-research.m4a"
+  srtUrl="/podcasts/ux-user-research.srt"
+/>
+
+## 1. Définition
 
 > La recherche utilisateur (ou UX Research) regroupe l’ensemble des méthodes visant à comprendre les comportements, attentes, motivations et frustrations des utilisateurs finaux.
 > 
@@ -13,7 +22,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 🎯 **2. Pourquoi faire de la recherche utilisateur ?**
+### 2. Pourquoi faire de la recherche utilisateur ?
 
 | ✅ Objectifs | ✨ Résultats attendus |
 | --- | --- |
@@ -24,7 +33,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 🛠️ **3. Les grandes méthodes de recherche**
+### 3. Les grandes méthodes de recherche
 
 ##### 📚 **Études documentaires**
 
@@ -45,7 +54,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 💬 **4. Études qualitatives (exploratoires)**
+### 4. Études qualitatives (exploratoires)
 
 | 🧪 Méthode | 👥 Objectif principal |
 | --- | --- |
@@ -57,7 +66,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 📊 **5. Études quantitatives (statistiques)**
+### 5. Études quantitatives (statistiques)
 
 - **Enquêtes** : via Google Forms, Typeform, etc.
 - **Analytics** : données de navigation, heatmaps, taux de clics
@@ -67,7 +76,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 👤 **6. Cibler les bons utilisateurs**
+### 6. Cibler les bons utilisateurs
 
 - Créer une **liste d’utilisateurs potentiels** par brainstorming
 - Définir des **personae** réalistes
@@ -79,7 +88,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 🧠 **7. Outils IA & prompts pour la recherche**
+### 7. Outils IA & prompts pour la recherche
 
 - Générer des scripts d’interviews
 - Classer des feedbacks utilisateurs
@@ -90,7 +99,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### 🧩 **8. Synthétiser la recherche**
+### 8. Synthétiser la recherche
 
 - **Carte d’empathie**
 - **Customer Journey Map**
@@ -103,7 +112,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ---
 
-### ✅ **Conclusion**
+### Conclusion
 
 La recherche utilisateur n’est pas une étape "optionnelle" :
 
