--- a/src/content/docs/fr/ux-cognitive-psychology.mdx
+++ b/src/content/docs/fr/ux-cognitive-psychology.mdx
@@ -6,12 +6,13 @@ weight: 2
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 
+<code> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
 
 <SrtPlayer
-      client:only="react"
-      audioSrc="/podcasts/ux-cognitive-psychology.m4a"
-      srtUrl="/podcasts/ux-cognitive-psychology.srt"
-    />
+  client:only="react"
+  audioSrc="/podcasts/ux-cognitive-psychology.m4a"
+  srtUrl="/podcasts/ux-cognitive-psychology.srt"
+/>
 
 ## 1. Définition
 
