--- a/src/content/docs/fr/information-architecture.mdx
+++ b/src/content/docs/fr/information-architecture.mdx
@@ -4,7 +4,7 @@ description: "UIX Recap est pensé comme un support clair et synthétique : un o
 weight: 6
 ---
 
-### 📘 **1. Définition**
+### 1. Définition
 
 L’architecture de l’information consiste à structurer et organiser le contenu d’un produit numérique pour que l’utilisateur comprenne, navigue et accède facilement à ce qu’il cherche.
 
@@ -13,7 +13,7 @@ Elle est au cœur de la conception UX, entre le **contenu** et la **navigation**
 
 ---
 
-### 🧠 **2. Pourquoi c’est important ?**
+### 2. Pourquoi c’est important ?
 
 - Évite la surcharge cognitive
 - Favorise la clarté et la lisibilité
@@ -25,30 +25,30 @@ Elle est au cœur de la conception UX, entre le **contenu** et la **navigation**
 
 ---
 
-### 🔎 **3. Méthode OOUX (Object-Oriented UX)**
+### 3. Méthode OOUX (Object-Oriented UX)
 
 L’OOUX (UX orientée objet) est une méthode qui structure les interfaces autour des "objets" du système, avant de penser à la navigation ou au layout.
 
 Inspirée de la pensée objet (comme en dev), cette méthode met l’accent sur **le contenu et les relations** avant tout.
 
----
+--
 
-### 🧩 **Étape 1 – Identifier les objets**
+##### Étape 1 – Identifier les objets
 
-##### 🔍 Qu’est-ce qu’un objet ?
+Qu’est-ce qu’un objet ?
 
 - Élément central de l’interface (ex : cours, utilisateur, commande…)
 - Porteur de sens pour l’utilisateur
 - Apparaît sous différentes formes (liste, fiche, résumé…)
 
-##### 🛠 Atelier :
+Atelier :
 
 - Lire un brief produit ou description
 - Noter tous les objets sur des post-it bleus
 
----
+--
 
-### 🟨 **Étape 2 – Caractéristiques & métadonnées**
+##### Étape 2 – Caractéristiques & métadonnées
 
 - **Caractéristiques** : infos qui définissent l’objet (titre, auteur, durée…)
 - **Métadonnées** : permettent de **filtrer/trier** les objets (catégorie, date, popularité…)
@@ -56,9 +56,9 @@ Inspirée de la pensée objet (comme en dev), cette méthode met l’accent sur 
 > 🛠 Post-it jaunes = caractéristiques
 > 🛠 Post-it roses = métadonnées
 
----
+--
 
-### 🔗 **Étape 3 – Relations entre objets**
+##### Étape 3 – Relations entre objets
 
 - Quels objets sont **liés** à d’autres ?
 - Un objet peut en **encapsuler** un autre (ex : une “formation” contient des “cours”)
@@ -66,20 +66,20 @@ Inspirée de la pensée objet (comme en dev), cette méthode met l’accent sur 
 
 > 🛠 Post-it bleus imbriqués pour les objets liés
 
----
+--
 
-### 🗂️ **Étape 4 – Classer et hiérarchiser**
+##### Étape 4 – Classer et hiérarchiser
 
 Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
 - Trier les caractéristiques par ordre d’importance
 - Réfléchir à ce que l’utilisateur souhaite voir en premier
 
-🛠 Post-it repositionnés du plus important (en haut) au moins utile (en bas)
+> 🛠 Post-it repositionnés du plus important (en haut) au moins utile (en bas)
 
 ---
 
-### 🟩 **Étape 5 – Définir les interactions**
+### Étape 5 – Définir les interactions
 
 - Quelles actions peut-on faire sur chaque objet ? (ex : “ajouter au panier”, “modifier”, “suivre ce cours”…)
 - C’est la **couche interactive** de l’architecture
@@ -88,7 +88,7 @@ Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
 ---
 
-### 🧠 **4. Autres outils en architecture de l’info**
+### 4. Autres outils en architecture de l’info
 
 | 🧰 Outil | 💡 Objectif principal |
 | --- | --- |
@@ -99,7 +99,7 @@ Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
 ---
 
-### ✅ **Conclusion**
+### Conclusion
 
 > Une bonne architecture de l’information, c’est rendre l’invisible visible, en rendant le bon contenu accessible au bon moment.
 
