--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -4,7 +4,7 @@ description: "UIX Recap est pensé comme un support clair et synthétique : un o
 weight: 5
 ---
 
-### 📘 **1. Qu’est-ce que l’UX Mapping ?**
+### 1. Qu’est-ce que l’UX Mapping ?
 
 L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode qui permet de représenter visuellement l’expérience d’un utilisateur lorsqu’il interagit avec un produit ou un service.
  
@@ -17,7 +17,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 🧠 **2. Pourquoi utiliser l’UX Mapping ?**
+### 2. Pourquoi utiliser l’UX Mapping ?
 
 - Aide à **restituer les données** de recherche sous forme exploitable
 - Donne une **vue d’ensemble du parcours utilisateur**
@@ -27,7 +27,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 🧰 **3. Les grandes méthodes d’UX Mapping**
+### 3. Les grandes méthodes d’UX Mapping
 
 | 🛠️ Méthode | 🎯 Objectif principal |
 | --- | --- |
@@ -39,10 +39,10 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 🧩 **4. Focus sur les outils principaux**
+### 4. Focus sur les outils principaux
 
 
-##### 💓 **Carte d’empathie (Empathy Map)**
+##### Carte d’empathie (Empathy Map)
 
 - Centrée sur l’utilisateur et ses perceptions
 - 4 quadrants :
@@ -54,7 +54,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 - Réalisée souvent en atelier collaboratif
 
 
-##### 🚶‍♂️ **Customer Journey Map (CJM)**
+##### Customer Journey Map (CJM)
 
 - Frise chronologique de l’expérience utilisateur complète
 - Inclut :
@@ -70,7 +70,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 🧭 **Les étapes pour créer une CJM**
+### Les étapes pour créer une CJM
 
 1. **Choisir un persona** cible
 2. **Définir la portée** (où commence et où finit le parcours)
@@ -85,9 +85,9 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 > 📌 Outils conseillés : Figma, Miro, Smaply
 
----
+--
 
-### 🧩 **Autres variantes utiles**
+##### Autres variantes utiles
 
 - **User Journey Map** : parcours spécifique (ex. inscription à une appli)
 - **Experience Map** : macro-vue de l’expérience (souvent multi-canaux)
@@ -95,7 +95,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### 🧠 **5. Bonnes pratiques**
+### 5. Bonnes pratiques
 
 - S’appuyer sur **des données réelles** issues de la recherche utilisateur
 - Travailler en **groupe pluridisciplinaire**
@@ -105,7 +105,7 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ---
 
-### ✅ **Conclusion**
+### Conclusion
 
 L’UX Mapping est un outil puissant pour :
 
