--- a/src/content/docs/fr/ux-personas-and-empathy.mdx
+++ b/src/content/docs/fr/ux-personas-and-empathy.mdx
@@ -4,29 +4,29 @@ description: "Comprendre les mécanismes mentaux pour améliorer l’expérience
 weight: 4
 ---
 
-## 📘 **1. Qu’est-ce qu’un persona ?**
+## 1. Qu’est-ce qu’un persona ?
 
 > Un persona est un profil semi-fictif représentant un segment d’utilisateurs cibles, basé sur des données réelles (quantitatives & qualitatives).
 > 
 
-🎯 Il permet de **garder l’utilisateur au centre** de la conception tout au long du projet.
+> 🎯 Il permet de **garder l’utilisateur au centre** de la conception tout au long du projet.
 
 ---
 
-### 🧬 **2. Origines & objectifs**
+### 2. Origines & objectifs
 
 - Inventé par **Alan Cooper** en 1999 pour concevoir des interfaces orientées utilisateur.
 - Utilisé en UX **(User Persona)** pour améliorer l’expérience.
 - Utilisé en marketing **(Buyer Persona)** pour cibler une audience commerciale.
 
-🧠 C’est un outil d’**empathie** pour :
+C’est un outil d’**empathie** pour :
 
 - Comprendre les motivations, frustrations, objectifs
 - Arbitrer des décisions UX : *“Est-ce que cette fonctionnalité aiderait [persona] à… ?”*
 
 ---
 
-### 🧠 **3. Caractériser un persona UX**
+### 3. Caractériser un persona UX
 
 | 📊 Catégorie | 💡 Exemples |
 | --- | --- |
@@ -39,7 +39,7 @@ weight: 4
 
 ---
 
-### 🧪 **4. Types de personae**
+### 4. Types de personae
 
 ##### Proto-persona
     - Basé sur des hypothèses internes
@@ -53,7 +53,7 @@ weight: 4
 
 ---
 
-### 🧰 **5. Contenu recommandé d’un persona**
+### 5. Contenu recommandé d’un persona
 
 - Prénom, âge, photo fictive
 - Biographie courte
@@ -69,9 +69,9 @@ weight: 4
 
 ---
 
-### 💓 **6. Empathie & Empathy Map**
+### 6. Empathie & Empathy Map
 
-##### 🧠 Qu’est-ce que la carte d’empathie ?
+##### Qu’est-ce que la carte d’empathie ?
 
 > Une Empathy Map est un outil visuel qui aide à synthétiser ce que l’on sait d’un utilisateur.
 > 
@@ -87,18 +87,18 @@ Elle permet d’aller **au-delà des données brutes** pour comprendre :
 
 ---
 
-### 🛠️ **Utilisation en atelier collaboratif**
+### Utilisation en atelier collaboratif
 
 - En équipe (design, marketing, produit, support…)
 - Avec des post-its ou sur un board Figma
 - Chaque bloc du template est complété collectivement
 - Peut inclure aussi : peurs, frustrations, bénéfices attendus
 
-📌 *Chaque carte d’empathie est associée à un persona spécifique*
+> 📌 *Chaque carte d’empathie est associée à un persona spécifique*
 
 ---
 
-### 📊 **7. Carte d'empathie : Structure classique**
+### 7. Carte d'empathie : Structure classique
 
 | 🟪 Bloc | 🎯 Contenu |
 | --- | --- |
@@ -112,7 +112,7 @@ Elle permet d’aller **au-delà des données brutes** pour comprendre :
 ---
 
 
-### 🔄 **8. Synthèse & livrables**
+### 8. Synthèse & livrables
 
 - 1 **persona UX** complet par type d’utilisateur
 - 1 **empathy map** par persona
@@ -125,7 +125,7 @@ Elle permet d’aller **au-delà des données brutes** pour comprendre :
 
 ---
 
-### ✅ **Conclusion**
+### Conclusion
 
 Les **personae et cartes d’empathie** sont les bases de toute démarche UX :
 
