--- a/src/content/docs/fr/information-architecture.mdx
+++ b/src/content/docs/fr/information-architecture.mdx
@@ -79,7 +79,7 @@ Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
 ---
 
-### Étape 5 – Définir les interactions
+##### Étape 5 – Définir les interactions
 
 - Quelles actions peut-on faire sur chaque objet ? (ex : “ajouter au panier”, “modifier”, “suivre ce cours”…)
 - C’est la **couche interactive** de l’architecture
