Add French subtitles for the podcast episode on UX personas and empathy

--- a/src/content/docs/fr/ux-personas-and-empathy.mdx
+++ b/src/content/docs/fr/ux-personas-and-empathy.mdx
@@ -1,13 +1,22 @@
 ---
-title: Psychologie cognitive
-description: "Comprendre les mécanismes mentaux pour améliorer l’expérience utilisateur"
+title: Personae & Empathie
+description: "Un persona est un profil semi-fictif représentant un segment d’utilisateurs cibles, basé sur des données réelles (quantitatives & qualitatives)."
 weight: 4
 ---
+
+import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
+
+<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+
+<SrtPlayer
+  client:only="react"
+  audioSrc="/podcasts/ux-personas-and-empathy.m4a"
+  srtUrl="/podcasts/ux-personas-and-empathy.srt"
+/>
 
 ## 1. Qu’est-ce qu’un persona ?
 
 > Un persona est un profil semi-fictif représentant un segment d’utilisateurs cibles, basé sur des données réelles (quantitatives & qualitatives).
-> 
 
 > 🎯 Il permet de **garder l’utilisateur au centre** de la conception tout au long du projet.
 
@@ -22,34 +31,35 @@ weight: 4
 C’est un outil d’**empathie** pour :
 
 - Comprendre les motivations, frustrations, objectifs
-- Arbitrer des décisions UX : *“Est-ce que cette fonctionnalité aiderait [persona] à… ?”*
+- Arbitrer des décisions UX : _“Est-ce que cette fonctionnalité aiderait [persona] à… ?”_
 
 ---
 
 ### 3. Caractériser un persona UX
 
-| 📊 Catégorie | 💡 Exemples |
-| --- | --- |
-| **Démographiques** | Âge, genre, situation familiale |
-| **Psycho-cognitives** | Langage, personnalité, croyances, capacité physique ou mentale |
-| **Organisationnelles** | Secteur d’activité, environnement de travail |
-| **Liées à la tâche** | Objectifs, type d’usage, expérience, fréquence |
+| 📊 Catégorie           | 💡 Exemples                                                    |
+| ---------------------- | -------------------------------------------------------------- |
+| **Démographiques**     | Âge, genre, situation familiale                                |
+| **Psycho-cognitives**  | Langage, personnalité, croyances, capacité physique ou mentale |
+| **Organisationnelles** | Secteur d’activité, environnement de travail                   |
+| **Liées à la tâche**   | Objectifs, type d’usage, expérience, fréquence                 |
 
-> ✅ Source : Karine Lallemand – *Méthodes de design UX*
+> ✅ Source : Karine Lallemand – _Méthodes de design UX_
 
 ---
 
 ### 4. Types de personae
 
 ##### Proto-persona
+
     - Basé sur des hypothèses internes
     - Créé rapidement en début de projet
     - Moins précis mais utile pour démarrer
-    
+
 ##### Persona UX (recherché)
+
     - Repose sur **des données d’entretiens, d’observation, d’analyse**
     - Permet d’avoir une vision plus réaliste et approfondie
-    
 
 ---
 
@@ -74,7 +84,6 @@ C’est un outil d’**empathie** pour :
 ##### Qu’est-ce que la carte d’empathie ?
 
 > Une Empathy Map est un outil visuel qui aide à synthétiser ce que l’on sait d’un utilisateur.
-> 
 
 Elle permet d’aller **au-delà des données brutes** pour comprendre :
 
@@ -94,23 +103,21 @@ Elle permet d’aller **au-delà des données brutes** pour comprendre :
 - Chaque bloc du template est complété collectivement
 - Peut inclure aussi : peurs, frustrations, bénéfices attendus
 
-> 📌 *Chaque carte d’empathie est associée à un persona spécifique*
+> 📌 _Chaque carte d’empathie est associée à un persona spécifique_
 
 ---
 
 ### 7. Carte d'empathie : Structure classique
 
-| 🟪 Bloc | 🎯 Contenu |
-| --- | --- |
-| **SAYS** | Ce que l’utilisateur dit en entretien |
-| **THINKS** | Ce qu’il pense (non dit, déduit) |
-| **DOES** | Ce qu’il fait concrètement |
-| **FEELS** | Ce qu’il ressent (positif/négatif) |
-| ➕ Facultatif | Frustrations, attentes, bénéfices |
-
+| 🟪 Bloc       | 🎯 Contenu                            |
+| ------------- | ------------------------------------- |
+| **SAYS**      | Ce que l’utilisateur dit en entretien |
+| **THINKS**    | Ce qu’il pense (non dit, déduit)      |
+| **DOES**      | Ce qu’il fait concrètement            |
+| **FEELS**     | Ce qu’il ressent (positif/négatif)    |
+| Facultatif | Frustrations, attentes, bénéfices     |
 
 ---
-
 
 ### 8. Synthèse & livrables
 
@@ -131,4 +138,4 @@ Les **personae et cartes d’empathie** sont les bases de toute démarche UX :
 
 > Ils transforment des données utilisateur en outil de conception centré humain.
 
-Sans eux, on conçoit pour *“des utilisateurs imaginaires”*, avec eux, on conçoit pour des **humains réels**.
+Sans eux, on conçoit pour _“des utilisateurs imaginaires”_, avec eux, on conçoit pour des **humains réels**.
