--- a/src/content/docs/fr/ux-personas-and-empathy.mdx
+++ b/src/content/docs/fr/ux-personas-and-empathy.mdx
@@ -75,7 +75,8 @@ C’est un outil d’**empathie** pour :
 - Niveau d’expertise digital
 - Contexte d’usage du service
 
-> 🎨 Utilise des **templates sur Figma** pour une mise en forme claire
+> [!TIP] Tips 
+> Utilise des **templates sur Figma** pour une mise en forme claire
 
 ---
 
@@ -103,7 +104,7 @@ Elle permet d’aller **au-delà des données brutes** pour comprendre :
 - Chaque bloc du template est complété collectivement
 - Peut inclure aussi : peurs, frustrations, bénéfices attendus
 
-> 📌 _Chaque carte d’empathie est associée à un persona spécifique_
+> _Chaque carte d’empathie est associée à un persona spécifique_
 
 ---
 
@@ -125,7 +126,7 @@ Elle permet d’aller **au-delà des données brutes** pour comprendre :
 - 1 **empathy map** par persona
 - Supports visuels présentables pour les stakeholders
 
-> 💡 Ces livrables sont utilisés pour :
+##### Ces livrables sont utilisés pour :
 
 - Alimenter le **Customer Journey Map**
 - Définir un **problème à résoudre** (étape suivante du Design Thinking)
