--- a/src/content/docs/fr/ux-user-research.mdx
+++ b/src/content/docs/fr/ux-user-research.mdx
@@ -62,7 +62,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 | **Focus group** | Recueillir des opinions & perceptions collectives |
 | **Observation contextuelle** | Étudier l’utilisateur dans son environnement réel |
 
-✅ On parle ici **d’émotion, de motivation, de logique personnelle**.
+> On parle ici **d’émotion, de motivation, de logique personnelle**.
 
 ---
 
@@ -72,7 +72,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 - **Analytics** : données de navigation, heatmaps, taux de clics
 - **UX Metrics** : taux de rebond, taux d’abandon, Net Promoter Score (NPS)
 
-> 🎯 Sert à **confirmer ou invalider des hypothèses** issues du qualitatif.
+> Sert à **confirmer ou invalider des hypothèses** issues du qualitatif.
 
 ---
 
@@ -95,7 +95,8 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 - Analyser des commentaires clients
 - Outils : ChatGPT, Copilot, Perplexity, Wevo.ai, Relume…
 
-📌 *Toujours valider les résultats générés par l’IA !*
+> [!CAUTION] Important 
+> *Toujours valider les résultats générés par l’IA !*
 
 ---
 
@@ -108,7 +109,7 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 - **Méthode des 5 pourquoi**
 - **User Stories**
 
-> 🎯 L’objectif : **dégager une problématique claire** à résoudre.
+> L’objectif : **dégager une problématique claire** à résoudre.
 
 ---
 
