--- a/src/content/docs/fr/information-architecture.mdx
+++ b/src/content/docs/fr/information-architecture.mdx
@@ -4,10 +4,22 @@ description: "UIX Recap est pensé comme un support clair et synthétique : un o
 weight: 6
 ---
 
+import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
+
+<code>
+  {" "}
+  Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
+</code>
+
+<SrtPlayer
+  client:only="react"
+  audioSrc="/podcasts/information-architecture.m4a"
+  srtUrl="/podcasts/information-architecture.srt"
+/>
+
 ### 1. Définition
 
 L’architecture de l’information consiste à structurer et organiser le contenu d’un produit numérique pour que l’utilisateur comprenne, navigue et accède facilement à ce qu’il cherche.
-
 
 Elle est au cœur de la conception UX, entre le **contenu** et la **navigation**.
 
@@ -90,18 +102,17 @@ Objectif : **organiser les infos selon leur importance pour l’utilisateur**
 
 ### 4. Autres outils en architecture de l’info
 
-| 🧰 Outil | 💡 Objectif principal |
-| --- | --- |
-| **Arborescence** | Organiser les pages du site ou de l’app |
+| 🧰 Outil                          | 💡 Objectif principal                                       |
+| --------------------------------- | ----------------------------------------------------------- |
+| **Arborescence**                  | Organiser les pages du site ou de l’app                     |
 | **Tri par cartes (Card sorting)** | Découvrir la logique utilisateur pour catégoriser les infos |
-| **Wireframes** | Représenter graphiquement la structure d’une page |
-| **Sitemaps** | Visualiser l’organisation globale du site |
+| **Wireframes**                    | Représenter graphiquement la structure d’une page           |
+| **Sitemaps**                      | Visualiser l’organisation globale du site                   |
 
 ---
 
 ### Conclusion
 
-> Une bonne architecture de l’information, c’est rendre l’invisible visible, en rendant le bon contenu accessible au bon moment.
-
+Une bonne architecture de l’information, c’est rendre l’invisible visible, en rendant le bon contenu accessible au bon moment.
 
 Elle se pense **en amont du design**, en **collaboration avec toutes les équipes** (UX, produit, dev, contenu…).
