Corrige la mise en forme du texte concernant le podcast audio dans les fichiers information-architecture.mdx et ux-personalization.mdx

--- a/src/content/docs/fr/ux-personalization.mdx
+++ b/src/content/docs/fr/ux-personalization.mdx
@@ -6,10 +6,7 @@ weight: 7
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-<code>
-  Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by
-  Google)
-</code>
+<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
 
 <SrtPlayer
   client:only="react"
