--- a/src/content/docs/fr/ux-personalization.mdx
+++ b/src/content/docs/fr/ux-personalization.mdx
@@ -10,8 +10,8 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/ux-writing.m4a"
-  srtUrl="/podcasts/ux-writing.srt"
+  audioSrc="/podcasts/ux-personalization.m4a"
+  srtUrl="/podcasts/ux-personalization.srt"
 />
 
 ## 1. Qu’est-ce que la personnalisation ?
