--- a/src/content/docs/fr/ux-personalization.mdx
+++ b/src/content/docs/fr/ux-personalization.mdx
@@ -31,7 +31,7 @@ Elle transforme une **expérience générique** en **parcours sur mesure**.
 | S’adapter aux attentes individuelles | ↗ Satisfaction   |
 | Affirmer une identité de marque      | ↗ Image positive |
 
-> [!TIP] Information  
+> [!NOTE] Information  
 > 65 % des utilisateurs sont plus enclins à acheter auprès d’une marque qui les reconnaît et personnalise l’expérience (source : Accenture, 2017)
 
 ---
