--- a/src/content/docs/fr/information-architecture.mdx
+++ b/src/content/docs/fr/information-architecture.mdx
@@ -1,6 +1,6 @@
 ---
 title: UX Mapping
-description: "UIX Recap est pensé comme un support clair et synthétique : un outil pratique pour réviser, enseigner ou s’inspirer."
+description: "L’architecture de l’information consiste à structurer et organiser le contenu d’un produit numérique pour que l’utilisateur comprenne, navigue et accède facilement à ce qu’il cherche."
 weight: 6
 ---
 
