--- a/src/content/docs/fr/ux-cognitive-psychology.mdx
+++ b/src/content/docs/fr/ux-cognitive-psychology.mdx
@@ -1,6 +1,6 @@
 ---
 title: Psychologie cognitive
-description: "Comprendre les mécanismes mentaux pour améliorer l’expérience utilisateur"
+description: "La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans la perception, la mémoire, l’attention, la prise de décision, etc."
 weight: 2
 ---
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
@@ -16,7 +16,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 ## 1. Définition
 
-> La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans la perception, la mémoire, l’attention, la prise de décision, etc. Elle aide à concevoir des interfaces adaptées aux limites et aux habitudes cognitives des utilisateurs.
+La psychologie cognitive est l’étude des mécanismes mentaux impliqués dans la perception, la mémoire, l’attention, la prise de décision, etc. Elle aide à concevoir des interfaces adaptées aux limites et aux habitudes cognitives des utilisateurs.
 
 ---
 
