--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -1,13 +1,12 @@
 ---
 title: UX Mapping
-description: "UIX Recap est pensé comme un support clair et synthétique : un outil pratique pour réviser, enseigner ou s’inspirer."
+description: "L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode qui permet de représenter visuellement l’expérience d’un utilisateur lorsqu’il interagit avec un produit ou un service."
 weight: 5
 ---
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-
-<code> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
 
 <SrtPlayer
   client:only="react"
@@ -18,7 +17,6 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 ### 1. Qu’est-ce que l’UX Mapping ?
 
 L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode qui permet de représenter visuellement l’expérience d’un utilisateur lorsqu’il interagit avec un produit ou un service.
- 
 
 ##### 🎯 Objectif :
 
@@ -40,44 +38,42 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 
 ### 3. Les grandes méthodes d’UX Mapping
 
-| 🛠️ Méthode | 🎯 Objectif principal |
-| --- | --- |
-| **Empathy Map** | Comprendre l'utilisateur en profondeur |
-| **Customer Journey Map** | Représenter le parcours global (pré-vente à post-achat) |
-| **User Journey Map** | Parcours spécifique à une tâche ou un cas d’usage |
-| **Experience Map** | Exploration large de l’expérience, parfois multi-persona |
-| **Service Blueprint** | Détaille les processus internes derrière l’expérience |
+| 🛠️ Méthode               | 🎯 Objectif principal                                    |
+| ------------------------ | -------------------------------------------------------- |
+| **Empathy Map**          | Comprendre l'utilisateur en profondeur                   |
+| **Customer Journey Map** | Représenter le parcours global (pré-vente à post-achat)  |
+| **User Journey Map**     | Parcours spécifique à une tâche ou un cas d’usage        |
+| **Experience Map**       | Exploration large de l’expérience, parfois multi-persona |
+| **Service Blueprint**    | Détaille les processus internes derrière l’expérience    |
 
 ---
 
 ### 4. Focus sur les outils principaux
 
-
 ##### Carte d’empathie (Empathy Map)
 
 - Centrée sur l’utilisateur et ses perceptions
 - 4 quadrants :
-    - **Says** : ce qu’il dit
-    - **Thinks** : ce qu’il pense
-    - **Does** : ce qu’il fait
-    - **Feels** : ce qu’il ressent
+  - **Says** : ce qu’il dit
+  - **Thinks** : ce qu’il pense
+  - **Does** : ce qu’il fait
+  - **Feels** : ce qu’il ressent
 - Peut inclure frustrations, craintes, attentes
 - Réalisée souvent en atelier collaboratif
-
 
 ##### Customer Journey Map (CJM)
 
 - Frise chronologique de l’expérience utilisateur complète
 - Inclut :
-    - **Étapes du parcours**
-    - **Points de contact (touchpoints)**
-    - **Objectifs de l’utilisateur**
-    - **Émotions**
-    - **Canaux utilisés**
+  - **Étapes du parcours**
+  - **Points de contact (touchpoints)**
+  - **Objectifs de l’utilisateur**
+  - **Émotions**
+  - **Canaux utilisés**
 - Permet d’identifier :
-    - Points de friction
-    - Opportunités d’amélioration
-    - Responsabilités des équipes
+  - Points de friction
+  - Opportunités d’amélioration
+  - Responsabilités des équipes
 
 ---
 
@@ -87,14 +83,14 @@ L’UX Mapping (ou cartographie de l’expérience utilisateur) est une méthode
 2. **Définir la portée** (où commence et où finit le parcours)
 3. **Découper le parcours** en étapes
 4. **Structurer la carte** en lignes horizontales :
-    - Points de contact
-    - Emotions (courbe)
-    - Objectifs
-    - Hypothèses
-    - Solutions envisagées
+   - Points de contact
+   - Emotions (courbe)
+   - Objectifs
+   - Hypothèses
+   - Solutions envisagées
 5. **Analyser et partager les insights** avec l’équipe
 
-> [!TIP] Tips 
+> [!TIP] Tips
 > Outils conseillés : Figma, Miro, Smaply
 
 --
