--- a/src/content/docs/fr/ux-personalization.mdx
+++ b/src/content/docs/fr/ux-personalization.mdx
@@ -1,6 +1,6 @@
 ---
 title: Personnalisation & UX
-description: "L’UX Writing (ou rédaction UX) est l’art de rédiger des contenus clairs, utiles et cohérents pour guider les utilisateurs tout au long de leur interaction avec un produit digital."
+description: "La personnalisation consiste à adapter dynamiquement l’interface, le contenu ou les fonctionnalités d’un produit ou service numérique selon les préférences, comportements ou caractéristiques d’un utilisateur spécifique."
 weight: 7
 ---
 
