--- a/src/content/docs/fr/ux-personas-and-empathy.mdx
+++ b/src/content/docs/fr/ux-personas-and-empathy.mdx
@@ -16,9 +16,9 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 ## 1. Qu’est-ce qu’un persona ?
 
-> Un persona est un profil semi-fictif représentant un segment d’utilisateurs cibles, basé sur des données réelles (quantitatives & qualitatives).
+Un persona est un profil semi-fictif représentant un segment d’utilisateurs cibles, basé sur des données réelles (quantitatives & qualitatives).
 
-> 🎯 Il permet de **garder l’utilisateur au centre** de la conception tout au long du projet.
+Il permet de **garder l’utilisateur au centre** de la conception tout au long du projet.
 
 ---
 
