--- a/src/content/docs/fr/ux-user-research.mdx
+++ b/src/content/docs/fr/ux-user-research.mdx
@@ -1,8 +1,9 @@
 ---
 title: Recherche Utilisateur
-description: "Comprendre les utilisateurs pour concevoir les bonnes solutions"
+description: "La recherche utilisateur (ou UX Research) regroupe l’ensemble des méthodes visant à comprendre les comportements, attentes, motivations et frustrations des utilisateurs finaux."
 weight: 3
 ---
+
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 <code> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
@@ -15,8 +16,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 ## 1. Définition
 
-> La recherche utilisateur (ou UX Research) regroupe l’ensemble des méthodes visant à comprendre les comportements, attentes, motivations et frustrations des utilisateurs finaux.
-> 
+La recherche utilisateur (ou UX Research) regroupe l’ensemble des méthodes visant à comprendre les comportements, attentes, motivations et frustrations des utilisateurs finaux.
 
 Elle intervient **au début du processus UX** et permet de **prendre des décisions fondées sur des données réelles** plutôt que sur des suppositions.
 
@@ -24,12 +24,12 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ### 2. Pourquoi faire de la recherche utilisateur ?
 
-| ✅ Objectifs | ✨ Résultats attendus |
-| --- | --- |
-| Comprendre les usages en contexte | Identifier les problèmes réels |
+| ✅ Objectifs                                    | ✨ Résultats attendus                   |
+| ----------------------------------------------- | --------------------------------------- |
+| Comprendre les usages en contexte               | Identifier les problèmes réels          |
 | Recueillir données qualitatives & quantitatives | Créer des produits utiles & utilisables |
-| Valider ou invalider des hypothèses | Réduire les erreurs de conception |
-| Aligner les équipes autour du public cible | Gagner du temps & de l’argent |
+| Valider ou invalider des hypothèses             | Réduire les erreurs de conception       |
+| Aligner les équipes autour du public cible      | Gagner du temps & de l’argent           |
 
 ---
 
@@ -56,10 +56,10 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 
 ### 4. Études qualitatives (exploratoires)
 
-| 🧪 Méthode | 👥 Objectif principal |
-| --- | --- |
-| **Entretiens individuels** | Comprendre en profondeur les comportements |
-| **Focus group** | Recueillir des opinions & perceptions collectives |
+| 🧪 Méthode                   | 👥 Objectif principal                             |
+| ---------------------------- | ------------------------------------------------- |
+| **Entretiens individuels**   | Comprendre en profondeur les comportements        |
+| **Focus group**              | Recueillir des opinions & perceptions collectives |
 | **Observation contextuelle** | Étudier l’utilisateur dans son environnement réel |
 
 > On parle ici **d’émotion, de motivation, de logique personnelle**.
@@ -81,10 +81,10 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 - Créer une **liste d’utilisateurs potentiels** par brainstorming
 - Définir des **personae** réalistes
 - Tenir compte de leurs caractéristiques :
-    - **Démographiques** (âge, genre, lieu…)
-    - **Psycho-cognitives** (attitudes, habitudes, handicaps…)
-    - **Organisationnelles** (type d’entreprise, environnement)
-    - **Liées à la tâche** (usage, objectif, fréquence…)
+  - **Démographiques** (âge, genre, lieu…)
+  - **Psycho-cognitives** (attitudes, habitudes, handicaps…)
+  - **Organisationnelles** (type d’entreprise, environnement)
+  - **Liées à la tâche** (usage, objectif, fréquence…)
 
 ---
 
@@ -95,8 +95,8 @@ Elle intervient **au début du processus UX** et permet de **prendre des décisi
 - Analyser des commentaires clients
 - Outils : ChatGPT, Copilot, Perplexity, Wevo.ai, Relume…
 
-> [!CAUTION] Important 
-> *Toujours valider les résultats générés par l’IA !*
+> [!CAUTION] Important
+> _Toujours valider les résultats générés par l’IA !_
 
 ---
 
