--- a/src/content/docs/fr/ux-writing.mdx
+++ b/src/content/docs/fr/ux-writing.mdx
@@ -1,13 +1,12 @@
 ---
 title: UX Writing
-description: "L’UX Writing (ou rédaction UX) est l’art de rédiger des contenus clairs, utiles et cohérents pour guider les utilisateurs tout au long de leur interaction avec un produit digital."
+description: "L’UX Writing (ou "rédaction UX") est l’art de rédiger des contenus clairs, utiles et cohérents pour guider les utilisateurs tout au long de leur interaction avec un produit digital."
 weight: 7
 ---
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-
-<code> Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
+<code>Ce Récap' est disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)</code>
 
 <SrtPlayer
   client:only="react"
@@ -25,13 +24,13 @@ Il s'agit d’écrire **des micro-textes** (microcopy) qui améliorent la **comp
 
 ### 2. À quoi sert l’UX Writing ?
 
-| ✅ Objectifs principaux | 💡 Impact |
-| --- | --- |
-| Guider l’utilisateur | Fluidifie les parcours |
-| Réduire la friction | Moins d’abandons |
-| Rassurer | Crée la confiance |
-| Renforcer la marque | Ton, style et cohérence |
-| Inciter à l’action | Améliore la conversion |
+| ✅ Objectifs principaux | 💡 Impact               |
+| ----------------------- | ----------------------- |
+| Guider l’utilisateur    | Fluidifie les parcours  |
+| Réduire la friction     | Moins d’abandons        |
+| Rassurer                | Crée la confiance       |
+| Renforcer la marque     | Ton, style et cohérence |
+| Inciter à l’action      | Améliore la conversion  |
 
 ---
 
@@ -60,7 +59,6 @@ L’UX Writer intervient sur **tout le parcours utilisateur**, notamment :
 - **Pages vides ou 404**
 - **Chatbots, assistants, etc.**
 
-
 > Il intervient sur **apps, sites web, objets connectés, interfaces vocales…**
 
 ---
@@ -69,10 +67,10 @@ L’UX Writer intervient sur **tout le parcours utilisateur**, notamment :
 
 - Collabore avec : UX designers, Product Managers, développeurs, marketing
 - Travaille sur :
-    - **Recherche utilisateur**
-    - **Ton et voix** de la marque
-    - **Tests utilisateurs**
-    - **Mesure de performance des contenus**
+  - **Recherche utilisateur**
+  - **Ton et voix** de la marque
+  - **Tests utilisateurs**
+  - **Mesure de performance des contenus**
 
 > 🎯 Il est **la voix de la marque** dans l’interface.
 
@@ -80,27 +78,27 @@ L’UX Writer intervient sur **tout le parcours utilisateur**, notamment :
 
 ### 6. Bonnes pratiques UX Writing
 
-| 📝 Pratique | ✅ Objectif |
-| --- | --- |
-| **Connaître ses utilisateurs** | Adapter vocabulaire et structure |
-| **Ligne éditoriale cohérente** | Harmoniser tous les contenus |
-| **Éviter le jargon technique** | Être compris par tous |
-| **Hiérarchiser l’info** | Aller à l’essentiel |
-| **Soigner la lisibilité** | Courts paragraphes, phrases simples |
-| **Utiliser un ton juste** | En phase avec la marque et le moment |
-| **Guider avec empathie** | Anticiper les besoins, rassurer |
+| 📝 Pratique                    | ✅ Objectif                          |
+| ------------------------------ | ------------------------------------ |
+| **Connaître ses utilisateurs** | Adapter vocabulaire et structure     |
+| **Ligne éditoriale cohérente** | Harmoniser tous les contenus         |
+| **Éviter le jargon technique** | Être compris par tous                |
+| **Hiérarchiser l’info**        | Aller à l’essentiel                  |
+| **Soigner la lisibilité**      | Courts paragraphes, phrases simples  |
+| **Utiliser un ton juste**      | En phase avec la marque et le moment |
+| **Guider avec empathie**       | Anticiper les besoins, rassurer      |
 
 ---
 
 ### 7. UX Writing vs Copywriting
 
-| UX Writing | Copywriting |
-| --- | --- |
-| Micro-textes dans les interfaces | Textes longs : pubs, landing pages |
-| Centré sur l’usage | Centré sur la persuasion/vente |
-| Objectif : utilité, clarté, guidance | Objectif : conversion, engagement |
+| UX Writing                           | Copywriting                        |
+| ------------------------------------ | ---------------------------------- |
+| Micro-textes dans les interfaces     | Textes longs : pubs, landing pages |
+| Centré sur l’usage                   | Centré sur la persuasion/vente     |
+| Objectif : utilité, clarté, guidance | Objectif : conversion, engagement  |
 
-> [!TIP] Tips 
+> [!TIP] Tips
 > Dans les petites structures, un même profil peut faire les deux.
 
 ---
